fixed content overflow displacing top bars

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,4 +1,8 @@
 
+.container-fluid {
+    overflow: hidden;
+}
+
 #form-tray {
     background-color: darkred;
 }
